# src/controllers/authController.ts
@@ -1,4 +1,3 @@
-// controllers/authController.ts
 import { Request, Response } from 'express';
 import { AuthService } from '../services/authService';
 import { sendSuccessResponse, sendErrorResponse } from '../utils/responseUtil';
@@ -7,8 +6,10 @@ const authService = new AuthService();
 
 // Register a new user
 export const registerUser = async (req: Request, res: Response): Promise<void> => {
+    const { email, password } = req.body; 
+
     try {
-        const result = await authService.registerUser(req.body);
+        const result = await authService.registerUser({ email, password });
         sendSuccessResponse(res, 201, 'User registered successfully', result);
     } catch (error: any) {
         sendErrorResponse(res, error.status || 500, error.message);
@@ -21,13 +22,14 @@ export const loginUser = async (req: Request, res: Response): Promise<void> => {
         const result = await authService.loginUser(req.body);
         sendSuccessResponse(res, 200, 'User logged in successfully', result);
     } catch (error: any) {
-        sendErrorResponse(res, 401, 'Invalid login'); // Generic login error for security
+        sendErrorResponse(res, 401, 'Invalid login'); 
     }
 };
 
 // Refresh token function
 export const refreshToken = async (req: Request, res: Response): Promise<void> => {
     const { token } = req.body;
+
     try {
         const newToken = await authService.refreshToken(token);
         sendSuccessResponse(res, 200, 'Token refreshed successfully', { token: newToken });
